--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "eslint-config-wdfe",
-  "version": "0.4.1",
+  "version": "1.0.0",
   "description": "eslint config for wdfe",
-  "author": "jin5354",
+  "author": "wdfe",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -15,6 +15,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "wdfe",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1"
+  }
 }
